--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/querygenielogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/querynator5000logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Querynator5000 - Natural Language SQL Interface</title>
   </head>
