--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/querynator5000logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Querynator5000 - Natural Language SQL Interface</title>
+    <link rel="manifest" href="pwa/manifest.json">
   </head>
   <body>
     <div id="root"></div>
